use actual provider items images

--- a/app/styles/provider/detail.scss
+++ b/app/styles/provider/detail.scss
@@ -70,6 +70,8 @@ $gridBgColor: #F2F2F2;
 
       .img-wrapper {
         height: 190px;
+        width: 100%;
+        justify-content: center;
         display: flex;
         align-items: center;
 
