show offices schedule only if there’s offices

--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -14,7 +14,9 @@ ion-view(
       .provider-info
         .title.wrapper {{ ::providerDetVm.provider.nombre_establecimiento }}
         .subtitle.wrapper {{ ::providerDetVm.provider.actividad_economica }}
-        .wrapper
+        .wrapper(
+          ng-if="::providerDetVm.provider.offices"
+        )
           span.i.icon.ion-clock
           span {{ ::providerDetVm.openingTime | timeSchedule | formatDate:'HH:mm' }} - {{ ::providerDetVm.closingTime | timeSchedule | formatDate:'HH:mm' }}
 
