--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -15,7 +15,7 @@ ion-view(
         .title.wrapper {{ ::providerDetVm.provider.nombre_establecimiento }}
         .subtitle.wrapper {{ ::providerDetVm.provider.actividad_economica }}
         .wrapper(
-          ng-if="::providerDetVm.provider.offices"
+          ng-if="::providerDetVm.provider.provider_offices"
         )
           span.i.icon.ion-clock
           span {{ ::providerDetVm.openingTime | timeSchedule | formatDate:'HH:mm' }} - {{ ::providerDetVm.closingTime | timeSchedule | formatDate:'HH:mm' }}
