--- a/app/templates/directives/providers-carousel/providers-carousel.jade
+++ b/app/templates/directives/providers-carousel/providers-carousel.jade
@@ -10,5 +10,5 @@ slick-wrapper.providers-carousel(
           )
 
         .provider-card-footer
-          .nombre {{provider.nombre_establecimiento}}
-          .horario {{provider.horario}}
+          .nombre {{ ::provider.nombre_establecimiento }}
+          .horario {{ ::provider.horario }}
