--- a/app/styles/provider/detail.scss
+++ b/app/styles/provider/detail.scss
@@ -39,7 +39,7 @@ $gridBgColor: #F2F2F2;
         font-size: 16px;
       }
 
-      .icon {
+      .icon, .office-schedule {
         margin-right: 5px;
       }
     }
