--- a/app/styles/directives/providers-carousel.scss
+++ b/app/styles/directives/providers-carousel.scss
@@ -37,6 +37,13 @@
           }
           .horario {
             color: $base-grey;
+            font-size: 14px;
+            letter-spacing: -0.5px;
+            font-family: Montserrat-Regular;
+
+            .office-schedule {
+              margin-right: 5px;
+            }
           }
         }
       }
