--- a/app/templates/directives/providers-carousel/providers-carousel.jade
+++ b/app/templates/directives/providers-carousel/providers-carousel.jade
@@ -11,4 +11,7 @@ slick-wrapper.providers-carousel(
 
         .provider-card-footer
           .nombre {{ ::provider.nombre_establecimiento }}
-          .horario {{ ::provider.horario }}
+          .horario
+            provider-profile-schedule(
+              provider-profile='provider'
+            )
