--- a/app/styles/item/show.scss
+++ b/app/styles/item/show.scss
@@ -23,6 +23,11 @@
     margin-top: 15px;
     margin-bottom: 5px;
 
+    .slick-track {
+      display: flex;
+      align-items: center;
+    }
+
     .slick-content {
       margin-bottom: 10px;
       padding-left: 10px;
@@ -38,5 +43,56 @@
 
   .resource-detail-summary {
     text-transform: uppercase;
+  }
+
+  .resource-detail-long-summary {
+    background-color: $light-grey;
+    color: $base-grey;
+    padding: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    p {
+      margin-bottom: 0;
+      overflow: hidden;
+      max-height: 80px;
+      transition: max-height 0.2s ease-out;
+
+      &.expanded {
+        max-height: 600px;
+      }
+    }
+  }
+
+  .action-buttons-wrapper {
+    text-align: center;
+
+    .buttons-width-constraint {
+      display: inline-block;
+
+      .button {
+        display: block;
+        width: 100%;
+        margin-bottom: 15px;
+      }
+    }
+  }
+
+  .input-label {
+    font-family: Montserrat-Regular;
+    text-transform: uppercase;
+  }
+
+  .observaciones-wrapper {
+    border-bottom: 0;
+
+    textarea {
+      margin: 10px 0;
+      padding: 15px;
+      background-color: $light-grey;
+      min-height: 60px;
+    }
   }
 }
