--- a/app/styles/products/show.scss
+++ b/app/styles/products/show.scss
@@ -3,3 +3,23 @@
   font-family: Montserrat-Light;
   font-size: 13px;
 }
+
+.item-show-footer {
+  height: 60px;
+
+  .left-panel {
+    text-align: center;
+    min-width: 135px;
+    display: flex;
+
+    .button {
+      padding: 0 3px;
+    }
+  }
+
+  .center-panel {
+    width: 100%;
+    background-color: $stable;
+    z-index: 1;
+  }
+}
