--- a/app/templates/directives/product-counter/product-counter.jade
+++ b/app/templates/directives/product-counter/product-counter.jade
@@ -1,11 +1,15 @@
 .product-counter
   .actions-panel
     .button-minus-container
-      button.button-icon.icon.ion-ios-minus-outline.button-minus(ng-click="pcVm.handleClickMinus()")
+      button.button-icon.icon.ion-ios-minus-outline.button-minus(
+        ng-click="pcVm.handleClickMinus()"
+      )
     .counter-container
-      | x{{pcVm.itemsCount}}
+      | {{ ::('item.cantidadPrefix' | translate) }}{{pcVm.itemsCount}}
     .button-plus-container
-      button.button-icon.icon.ion-ios-plus-outline.button-plus(ng-click="pcVm.handleClickPlus()")
+      button.button-icon.icon.ion-ios-plus-outline.button-plus(
+        ng-click="pcVm.handleClickPlus()"
+      )
+
   .price-panel
-    .price
-      | {{pcVm.priceTotal | currency}}
+    .price {{ pcVm.priceTotalCents | priceCurrency | currency }}
