--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -27,7 +27,6 @@ ion-view(
           ) {{::('product.addCar' | translate)}}
           button.button.button-outline.button-positive.button-stretched.button-letter-stretched(
             ng-click="productVm.runAction(productVm.actions.wishlist)"
-            ng-disabled="!productVm.item.cantidad"
           ) {{::('product.addWishlist' | translate)}}
 
       .list.list-inset.resource-detail-long-summary(
@@ -51,10 +50,9 @@ ion-view(
             placeholder='{{ ::("cart.observacionesPlaceholder" | translate)}}'
           )
 
-  ion-footer-bar.bar-stable
-    .footer-product
-      .left-panel
-        button.button.button-outline.button-energized
-          | {{::("product.buyNow"|translate)}}
-      .center-panel
-        product-counter(options="productVm.options")
+  ion-footer-bar.bar-stable.item-show-footer
+    .left-panel
+      button.button.button-small.button-outline.button-energized.button-letter-stretched
+        | {{::("product.buyNow"|translate)}}
+    .center-panel
+      product-counter(options="productVm.options")
