--- a/app/templates/client/new-edit.jade
+++ b/app/templates/client/new-edit.jade
@@ -25,6 +25,7 @@ ion-modal-view
             type="text"
             ng-class="input-error"
             ng-model="clientsVm.client.ruc"
+            ng-pattern="/^[0-9]/"
             required
           )
         .errors-wrapper
@@ -33,7 +34,9 @@ ion-modal-view
             ng-if="clientsVm.clientForm.ruc.$touched"
           )
             span.message-error(ng-message="required")
-              | {{::("globals.isRequired"|translate)}}.
+              | {{::("globals.isRequired"|translate)}}
+            span.message-error(ng-message="pattern")
+              | {{::("globals.isPatternRuc"|translate)}}
           show-error(array-messages="clientsVm.messages.ruc")
 
         label.item.item-input.item-stacked-label(
