tweaking cart UI

--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -19,4 +19,11 @@
   .ion-navicon, .button {
     color: $white;
   }
+
+  .header-item {
+    .nav-bar-title {
+      font-family: Montserrat-Regular;
+      color: $white;
+    }
+  }
 }
