--- a/app/styles/cart/cart.scss
+++ b/app/styles/cart/cart.scss
@@ -71,3 +71,28 @@
     }
   }
 }
+
+.cart-preview {
+  background-color: $light-grey;
+
+  .provider-profile-section {
+    .provider-profile--title {
+      color: $base-yellow;
+      background-color: $white;
+      padding: 15px;
+      text-transform: uppercase;
+      font-size: 14px;
+      font-family: Montserrat-Regular;
+    }
+  }
+
+  .provider-items-in-cart {
+    border-top: 2px solid $light-grey;
+    border-bottom: 2px solid $light-grey;
+
+    .slick-container {
+      // TODO fix border not reaching top
+      border-right: 1px solid $light-grey;
+    }
+  }
+}
