--- a/app/styles/directives/slick-item.scss
+++ b/app/styles/directives/slick-item.scss
@@ -1,29 +1,66 @@
-.slick-item {
+.provider-items-in-cart {
+
+  .slick-track {
+    background-color: $white;
+    display: flex;
+  }
+
   .slick-container {
-    .slick-content {
-      text-align: center;
-      margin: 5px;
-      .item-card {
-        max-width: 180px;
-        margin: 5px auto;
-        color: $base-grey;
-        position: relative;
-        .img-container {
-          height: 200px;
-          .img {
-            width: 100%;
-            height: 100%;
-            background-repeat: no-repeat;
-            background-position: center;
-          }
+    align-self: flex-end;
+
+    .img-wrapper {
+      height: 180px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+
+    .customer-item-description {
+      text-align: left;
+      font-family: Montserrat-Light;
+      font-size: 14px;
+      line-height: 18px;
+      letter-spacing: -0.5px;
+
+      .customer-item--title {
+        color: $grey-secondary;
+        text-transform: uppercase;
+      }
+      .customer-item--value {
+        font-size: 13px;
+        color: $dark;
+      }
+    }
+  }
+
+  .slick-content {
+    text-align: center;
+    margin: 5px;
+    .item-card {
+      max-width: 180px;
+      margin: 5px auto;
+      color: $base-grey;
+      position: relative;
+      .img-container {
+        height: 200px;
+        .img {
+          width: 100%;
+          height: 100%;
+          background-repeat: no-repeat;
+          background-position: center;
         }
-        &-footer {
-          height: 50px;
-          text-align: left;
-          padding: 0 1rem;
-          .nombre {
-            opacity: 0.7;
-          }
+      }
+      &-footer {
+        height: 50px;
+        text-align: left;
+        padding: 0 1rem;
+        .nombre {
+          opacity: 0.7;
         }
       }
     }
