--- a/app/styles/provider/detail.scss
+++ b/app/styles/provider/detail.scss
@@ -8,6 +8,7 @@ $gridBgColor: #F2F2F2;
 
     .provider-logo {
       height: 100%;
+      min-height: 150px;
       width: 150px;
       text-align: center;
       display: flex;
