translate delivery methods

--- a/app/styles/directives/slick-item.scss
+++ b/app/styles/directives/slick-item.scss
@@ -8,6 +8,7 @@
   .slick-container {
     align-self: flex-end;
     margin: 5px 0;
+    padding: 0 5px;
 
     .img-wrapper {
       height: 180px;
