--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -20,10 +20,8 @@
     color: $white;
   }
 
-  .header-item {
-    .nav-bar-title {
-      font-family: Montserrat-Regular;
-      color: $white;
-    }
+  .title {
+    font-family: Montserrat-Regular;
+    color: $white;
   }
 }
