--- a/app/templates/cart/checkout.jade
+++ b/app/templates/cart/checkout.jade
@@ -87,7 +87,7 @@ ion-modal-view.cart-page
             i.ion-android-checkmark-circle
             span {{billingAddress.razon_social}} ({{billingAddress.direccion}})
 
-    ion-footer-bar.bar-stable
+    ion-footer-bar.bar-stable.bar-footer--tall
       button.button.button-outline.button-energized(
         type="submit"
       ) {{::('cart.placeOrder'|translate)}}
