--- a/app/templates/product/show.jade
+++ b/app/templates/product/show.jade
@@ -50,7 +50,7 @@ ion-view(
             placeholder='{{ ::("cart.observacionesPlaceholder" | translate)}}'
           )
 
-  ion-footer-bar.bar-stable.item-show-footer
+  ion-footer-bar.bar-stable.item-show-footer.bar-footer--tall
     .left-panel
       button.button.button-small.button-outline.button-energized.button-letter-stretched
         | {{::("product.buyNow"|translate)}}
