--- a/app/templates/product/product.jade
+++ b/app/templates/product/product.jade
@@ -27,10 +27,11 @@ slick-wrapper(settings="productVm.slickConfig")
     ng-class="{'expanded': productVm.more}"
   ) {{ ::productVm.product.observaciones }}
 
-  .text-center
-    button.button.button-clear.button-positive.button-letter-stretched.more-label(
-      ng-click="productVm.toggleShow()"
-    ) {{ (productVm.more) ? ("product.less"|translate) : ("product.more"|translate) }}
+  .text-center(
+    toggle-expand="productVm.more"
+  )
+    button.button.button-clear.button-positive.button-letter-stretched.more-label
+      {{ (productVm.more) ? ("product.less"|translate) : ("product.more"|translate) }}
 
 .list.list-inset
   label.item.item-input.item-stacked-label.observaciones-wrapper
