--- a/app/styles/directives/product-counter.scss
+++ b/app/styles/directives/product-counter.scss
@@ -9,6 +9,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    justify-content: center;
 
     .button-minus-container {
       .button-minus {
